# learnopengl

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.cpp
include/glad/: glad.h
shaders/: fragment.glsl  lighting-fs.glsl  lighting-vs.glsl  vertex.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp
